[gd_scene load_steps=34 format=3 uid="uid://bhcv5yht17qhh"]

[ext_resource type="PackedScene" uid="uid://b83u4ijk8ticy" path="res://cenas/player.tscn" id="1_byug6"]
[ext_resource type="Texture2D" uid="uid://cq1tutsie2lx7" path="res://sprite/estrelas.jpg" id="1_k4g1n"]
[ext_resource type="Script" uid="uid://dhyfcdndsv0e2" path="res://scripts/spawner.gd" id="3_k4g1n"]
[ext_resource type="FontFile" uid="uid://b5dwns2e2wujf" path="res://fonts/Minecraft.ttf" id="4_n6j27"]
[ext_resource type="AudioStream" uid="uid://bmku8or20clwd" path="res://sounds/impact.mp3" id="5_mcd7d"]
[ext_resource type="Texture2D" uid="uid://cyaa2iwt3i28i" path="res://sprite/loja.png" id="6_csfwj"]
[ext_resource type="Script" uid="uid://fypuqwajk14g" path="res://scripts/loja.gd" id="6_q2lhc"]
[ext_resource type="FontFile" uid="uid://pd8bvtufhcso" path="res://fonts/VCR_OSD_MONO_1.001.ttf" id="6_x8rq7"]
[ext_resource type="Texture2D" uid="uid://c6oyxgwxu1y3l" path="res://sprite/pato_gun.png" id="7_nggn4"]
[ext_resource type="Texture2D" uid="uid://e8cqmkrjck6i" path="res://sprite/shield.png" id="7_ui24j"]
[ext_resource type="Texture2D" uid="uid://j25e0nk8l8pd" path="res://sprite/life.png" id="8_bjhjl"]
[ext_resource type="Shader" uid="uid://5rtddom6arx5" path="res://shaders/crt.gdshader" id="12_4iunr"]
[ext_resource type="Script" uid="uid://hw63sewig2np" path="res://scripts/powerup_spawn.gd" id="12_v2wd5"]
[ext_resource type="AudioStream" uid="uid://d13ym0h3cwqey" path="res://sounds/explode.mp3" id="14_ssnxa"]
[ext_resource type="Script" uid="uid://b2nfokss4wciv" path="res://scripts/pause.gd" id="15_qi725"]
[ext_resource type="AudioStream" uid="uid://cyc720ubviqih" path="res://sounds/selection.mp3" id="16_v73jy"]

[sub_resource type="Environment" id="Environment_byug6"]
background_mode = 3
glow_enabled = true
glow_bloom = 0.1
glow_hdr_threshold = 4.0
glow_hdr_scale = 4.0
glow_hdr_luminance_cap = 256.0

[sub_resource type="Animation" id="Animation_q2lhc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_x8rq7"]
resource_name = "wave"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.23333, 2.21, 2.96667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.882353), Color(1, 1, 1, 0.882353), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ui24j"]
_data = {
&"RESET": SubResource("Animation_q2lhc"),
&"wave": SubResource("Animation_x8rq7")
}

[sub_resource type="Animation" id="Animation_nggn4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("loja2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -848)]
}

[sub_resource type="Animation" id="Animation_ui24j"]
resource_name = "loja1"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("loja2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -848), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_bjhjl"]
resource_name = "loja2"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("loja2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -782)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_csfwj"]
_data = {
&"RESET": SubResource("Animation_nggn4"),
&"loja1": SubResource("Animation_ui24j"),
&"loja2": SubResource("Animation_bjhjl")
}

[sub_resource type="Animation" id="Animation_4iunr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_csfwj"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v2wd5"]
_data = {
&"RESET": SubResource("Animation_4iunr"),
&"fade_in": SubResource("Animation_csfwj")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v2wd5"]
shader = ExtResource("12_4iunr")

[sub_resource type="QuadMesh" id="QuadMesh_csfwj"]
size = Vector2(1280, 720)
center_offset = Vector3(640, 360, 0)

[sub_resource type="Animation" id="Animation_wjlm5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_v73jy"]
resource_name = "freeze"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.99, 2.5, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.531973, 0.756806, 1, 1), Color(0.531973, 0.756806, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_p7ef8"]
resource_name = "metra"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.96, 3.99, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.720097, 0.685639, 1), Color(1, 0.720097, 0.685639, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p7ef8"]
_data = {
&"RESET": SubResource("Animation_wjlm5"),
&"freeze": SubResource("Animation_v73jy"),
&"metra": SubResource("Animation_p7ef8")
}

[node name="Node2D" type="Node2D"]
metadata/_edit_horizontal_guides_ = [-22.0]

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -2
offset_left = -778.0
offset_top = -522.0
offset_right = -738.0
offset_bottom = -482.0
scale = Vector2(66.7076, 37.1106)
color = Color(0.0562916, 0.0562916, 0.0562916, 1)

[node name="Sprite2D" type="Sprite2D" parent="ColorRect"]
position = Vector2(20.2526, 23.2548)
scale = Vector2(0.0119926, 0.0161679)
texture = ExtResource("1_k4g1n")

[node name="Node2D" parent="." instance=ExtResource("1_byug6")]
position = Vector2(582, 329)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(582, 329)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_byug6")

[node name="spawner" type="Node2D" parent="."]
script = ExtResource("3_k4g1n")

[node name="Timer" type="Timer" parent="spawner"]
wait_time = 3.0
one_shot = true
autostart = true

[node name="spawner1" type="Node2D" parent="spawner"]
position = Vector2(-292, -167)

[node name="spawner2" type="Node2D" parent="spawner"]
position = Vector2(-292, 810)

[node name="spawner3" type="Node2D" parent="spawner"]
position = Vector2(1389, 810)

[node name="spawner4" type="Node2D" parent="spawner"]
position = Vector2(1389, -167)

[node name="UI" type="Node2D" parent="."]

[node name="inimigos" type="Label" parent="UI"]
offset_left = 105.0
offset_top = 24.0
offset_right = 169.0
offset_bottom = 47.0
theme_override_fonts/font = ExtResource("4_n6j27")

[node name="inimigos" type="Label" parent="UI/inimigos"]
layout_mode = 0
offset_left = -78.0
offset_right = -4.0
offset_bottom = 49.0
theme_override_fonts/font = ExtResource("4_n6j27")
text = "Enemyes:
"

[node name="life" type="Label" parent="UI"]
offset_left = 67.0
offset_top = 47.0
offset_right = 131.0
offset_bottom = 70.0
theme_override_fonts/font = ExtResource("4_n6j27")

[node name="life" type="Label" parent="UI/life"]
layout_mode = 0
offset_left = -39.0
offset_right = 35.0
offset_bottom = 49.0
theme_override_fonts/font = ExtResource("4_n6j27")
text = "Life:
"

[node name="score" type="Label" parent="UI"]
offset_left = 576.0
offset_top = 30.0
offset_right = 631.0
offset_bottom = 53.0
theme_override_fonts/font = ExtResource("4_n6j27")

[node name="score" type="Label" parent="UI/score"]
layout_mode = 0
offset_left = -53.0
offset_right = -5.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("4_n6j27")
text = "Score:"

[node name="Button" type="Button" parent="UI"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 534.0
offset_top = 602.0
offset_right = 626.0
offset_bottom = 633.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_n6j27")
text = "Next Wave"

[node name="Impact" type="AudioStreamPlayer" parent="UI/Button"]
stream = ExtResource("5_mcd7d")
autoplay = true

[node name="loja" type="Button" parent="UI"]
visible = false
modulate = Color(1, 1, 1, 0.541176)
offset_left = 1055.0
offset_right = 2091.0
offset_bottom = 1032.0
scale = Vector2(0.1, 0.1)
text = "
"
icon = ExtResource("6_csfwj")
flat = true

[node name="alert" type="Label" parent="UI"]
offset_left = 13.0
offset_top = 630.0
offset_right = 306.0
offset_bottom = 653.0
theme_override_colors/font_color = Color(0.443137, 0.619608, 1, 0.498039)
theme_override_fonts/font = ExtResource("4_n6j27")
theme_override_font_sizes/font_size = 10
text = "PRESS \"E\" TO USE THE ENERGY SHIELD"

[node name="loja2" type="Node2D" parent="UI"]
visible = false
position = Vector2(0, -848)
script = ExtResource("6_q2lhc")

[node name="ColorRect" type="ColorRect" parent="UI/loja2"]
offset_left = -51.0
offset_top = -23.0
offset_right = 1213.0
offset_bottom = 694.0
color = Color(0.109804, 0.109804, 0.109804, 0.921569)

[node name="Label" type="Label" parent="UI/loja2"]
offset_left = 528.0
offset_top = 27.0
offset_right = 592.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("4_n6j27")
text = "Score: 0"

[node name="shoot" type="ColorRect" parent="UI/loja2"]
z_index = 1
offset_left = 44.0
offset_top = 50.0
offset_right = 346.0
offset_bottom = 588.0
color = Color(0.0214346, 0.0214346, 0.0214346, 0.321569)

[node name="buy" type="Button" parent="UI/loja2/shoot"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -53.0
offset_top = -41.0
offset_right = -12.0
offset_bottom = -17.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_n6j27")
text = "BUY"

[node name="Label" type="Label" parent="UI/loja2/shoot"]
layout_mode = 0
offset_left = 23.0
offset_top = 501.0
offset_right = 63.0
offset_bottom = 524.0
theme_override_fonts/font = ExtResource("4_n6j27")

[node name="description" type="Label" parent="UI/loja2/shoot"]
layout_mode = 0
offset_left = 23.0
offset_top = 163.0
offset_right = 114.0
offset_bottom = 186.0
theme_override_fonts/font = ExtResource("4_n6j27")
text = "Description:"

[node name="ColorRect" type="ColorRect" parent="UI/loja2/shoot/description"]
z_index = -1
layout_mode = 0
offset_top = 15.0
offset_right = 254.0
offset_bottom = 306.0
color = Color(0, 0, 0, 0.568627)

[node name="Label" type="Label" parent="UI/loja2/shoot/description"]
layout_mode = 0
offset_left = 28.0
offset_top = 33.0
offset_right = 231.0
offset_bottom = 87.0
theme_override_fonts/font = ExtResource("4_n6j27")
text = "Adds one extra projectile 
per shot. Increases your 
overall firepower."

[node name="PatoGun" type="Sprite2D" parent="UI/loja2/shoot"]
position = Vector2(143, 88)
scale = Vector2(0.460938, 0.480469)
texture = ExtResource("7_nggn4")

[node name="uti" type="ColorRect" parent="UI/loja2"]
z_index = 1
offset_left = 426.0
offset_top = 51.0
offset_right = 728.0
offset_bottom = 589.0
color = Color(0.0214346, 0.0214346, 0.0214346, 0.321569)

[node name="buy_uti" type="Button" parent="UI/loja2/uti"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -59.0
offset_top = -43.0
offset_right = -18.0
offset_bottom = -19.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_n6j27")
text = "BUY"

[node name="Label" type="Label" parent="UI/loja2/uti"]
layout_mode = 0
offset_left = 23.0
offset_top = 501.0
offset_right = 63.0
offset_bottom = 524.0
theme_override_fonts/font = ExtResource("4_n6j27")

[node name="description" type="Label" parent="UI/loja2/uti"]
layout_mode = 0
offset_left = 23.0
offset_top = 163.0
offset_right = 114.0
offset_bottom = 186.0
theme_override_fonts/font = ExtResource("4_n6j27")
text = "Description:"

[node name="ColorRect" type="ColorRect" parent="UI/loja2/uti/description"]
z_index = -1
layout_mode = 0
offset_top = 15.0
offset_right = 254.0
offset_bottom = 306.0
color = Color(0, 0, 0, 0.568627)

[node name="Label" type="Label" parent="UI/loja2/uti/description"]
layout_mode = 0
offset_left = 28.0
offset_top = 33.0
offset_right = 231.0
offset_bottom = 87.0
theme_override_fonts/font = ExtResource("4_n6j27")
text = "Reduces energy 
field cooldown by 0.5s. 
Reactivate your
defense faster."

[node name="Shield" type="Sprite2D" parent="UI/loja2/uti"]
position = Vector2(141, 87)
scale = Vector2(0.177316, 0.182109)
texture = ExtResource("7_ui24j")

[node name="life" type="ColorRect" parent="UI/loja2"]
z_index = 1
offset_left = 801.0
offset_top = 51.0
offset_right = 1103.0
offset_bottom = 589.0
color = Color(0.0214346, 0.0214346, 0.0214346, 0.321569)

[node name="buy_life" type="Button" parent="UI/loja2/life"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -38.0
offset_right = -7.0
offset_bottom = -14.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_n6j27")
text = "BUY"

[node name="Label" type="Label" parent="UI/loja2/life"]
layout_mode = 0
offset_left = 23.0
offset_top = 501.0
offset_right = 63.0
offset_bottom = 524.0
theme_override_fonts/font = ExtResource("4_n6j27")

[node name="description" type="Label" parent="UI/loja2/life"]
layout_mode = 0
offset_left = 23.0
offset_top = 163.0
offset_right = 114.0
offset_bottom = 186.0
theme_override_fonts/font = ExtResource("4_n6j27")
text = "Description:"

[node name="ColorRect" type="ColorRect" parent="UI/loja2/life/description"]
z_index = -1
layout_mode = 0
offset_top = 15.0
offset_right = 254.0
offset_bottom = 306.0
color = Color(0, 0, 0, 0.568627)

[node name="Label" type="Label" parent="UI/loja2/life/description"]
layout_mode = 0
offset_left = 28.0
offset_top = 33.0
offset_right = 231.0
offset_bottom = 87.0
theme_override_fonts/font = ExtResource("4_n6j27")
text = "Fully restores your health. 
A vital recovery for 
your ship."

[node name="Life" type="Sprite2D" parent="UI/loja2/life"]
position = Vector2(152, 90)
scale = Vector2(0.08, 0.0630209)
texture = ExtResource("8_bjhjl")

[node name="return" type="Button" parent="UI/loja2"]
offset_left = 1079.0
offset_top = 9.0
offset_right = 1140.0
offset_bottom = 40.0
text = "Return"

[node name="Label" type="Label" parent="UI"]
modulate = Color(1, 1, 1, 0)
z_index = -1
offset_left = 380.0
offset_top = 285.0
offset_right = 790.0
offset_bottom = 373.0
theme_override_fonts/font = ExtResource("6_x8rq7")
theme_override_font_sizes/font_size = 100
text = "WAVE: 1"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/Label"]
libraries = {
&"": SubResource("AnimationLibrary_ui24j")
}
autoplay = "wave"

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI"]
libraries = {
&"": SubResource("AnimationLibrary_csfwj")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_v2wd5")
}
autoplay = "fade_in"

[node name="powerup" type="Node2D" parent="."]
script = ExtResource("12_v2wd5")

[node name="Node2D" type="Node2D" parent="powerup"]
position = Vector2(49, -201)

[node name="powerup" type="Timer" parent="powerup"]
wait_time = 5.0
one_shot = true
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MeshInstance2D" type="MeshInstance2D" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_v2wd5")
position = Vector2(-2, 0)
scale = Vector2(0.900781, 0.9)
mesh = SubResource("QuadMesh_csfwj")

[node name="Explode" type="AudioStreamPlayer2D" parent="."]
position = Vector2(273, 222)
stream = ExtResource("14_ssnxa")
volume_db = -20.0

[node name="pause" type="Control" parent="."]
process_mode = 3
visible = false
z_index = 10
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("15_qi725")

[node name="ColorRect" type="ColorRect" parent="pause"]
layout_mode = 0
offset_right = 1173.0
offset_bottom = 653.0
color = Color(0, 0, 0, 0.862745)

[node name="Label" type="Label" parent="pause"]
layout_mode = 0
offset_left = 563.0
offset_top = 335.0
offset_right = 603.0
offset_bottom = 358.0
theme_override_fonts/font = ExtResource("4_n6j27")
theme_override_font_sizes/font_size = 0
text = "EXIT"

[node name="Label2" type="Label" parent="pause"]
layout_mode = 0
offset_left = 551.0
offset_top = 311.0
offset_right = 615.0
offset_bottom = 334.0
theme_override_fonts/font = ExtResource("4_n6j27")
theme_override_font_sizes/font_size = 0
text = "RESUME"

[node name="[" type="Label" parent="pause"]
layout_mode = 0
offset_left = 545.0
offset_top = 303.0
offset_right = 585.0
offset_bottom = 326.0
text = "["

[node name="]" type="Label" parent="pause"]
layout_mode = 0
offset_left = 618.0
offset_top = 303.0
offset_right = 658.0
offset_bottom = 326.0
text = "]"

[node name="[2" type="Label" parent="pause"]
visible = false
layout_mode = 0
offset_left = 557.0
offset_top = 328.0
offset_right = 597.0
offset_bottom = 351.0
text = "["

[node name="]2" type="Label" parent="pause"]
visible = false
layout_mode = 0
offset_left = 603.0
offset_top = 328.0
offset_right = 643.0
offset_bottom = 351.0
text = "]"

[node name="Selection" type="AudioStreamPlayer" parent="pause"]
stream = ExtResource("16_v73jy")
volume_db = -10.0

[node name="efeitos" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_p7ef8")
}

[connection signal="timeout" from="spawner/Timer" to="spawner" method="_on_spawn_timeout"]
[connection signal="pressed" from="UI/Button" to="spawner" method="next_wave"]
[connection signal="pressed" from="UI/loja" to="spawner" method="_on_loja_pressed"]
[connection signal="pressed" from="UI/loja2/shoot/buy" to="UI/loja2" method="_on_buy_pressed"]
[connection signal="pressed" from="UI/loja2/uti/buy_uti" to="UI/loja2" method="_on_buy_uti_pressed"]
[connection signal="pressed" from="UI/loja2/life/buy_life" to="UI/loja2" method="_on_buy_life_pressed"]
[connection signal="pressed" from="UI/loja2/return" to="spawner" method="_on_return_pressed"]
[connection signal="timeout" from="powerup/powerup" to="powerup" method="_on_powerup_timeout"]
